<resources>
    <string name="app_name">Placemark</string>
    <string name="hint_placemarkTitle">Placemark Title</string>
    <string name="hint_placemarkDescription">Description </string>
    <string name="button_addPlacemark">Add Placemark</string>
    <string name="menu_addPlacemark">Add</string>
    <string name="menu_cancelPlacemark">Cancel</string>
    <string name="enter_placemark_title"> Please enter a Placemark Title </string>
    <string name="save_placemark"> Save Placemark </string>
    <string name="button_addImage"> Add Image </string>
    <string name="select_placemark_image">Select placemark image</string>
    <string name="change_placemark_image">Change placemark image</string>
    <string name="change_placemark_location">Change placemark location</string>
    <string name="button_location">Set Location</string>
    <string name="title_activity_map">Map</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="don_t_have_an_account_sign_up">Don\'t have an account? Sign Up</string>
    <string name="alraedy_have_account_login">Already have an account. Login</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="hint_nameclick">Click on marker for more information</string>
</resources>
